--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		<section>
 	
 			<div class="assignments">
-				<a class="button" href="/yale/clock">Clock</a>
+				<a class="button" href="/interactive-design/clock">Clock</a>
 				<br>
-				<a class="button" href="/yale/how">How to Speak Gibberish</a>
+				<a class="button" href="/interactive-design/how">How to Speak Gibberish</a>
 				<br>
-				<a class="button" href="/yale/main.html">Exercises in Style</a>
+				<a class="button" href="/interactive-design/fifteen/main.html">Exercises in Style</a>
 				<br>
-				<a class="button" href="/yale/howlinks">How To Guide</a>
+				<a class="button" href="/interactive-design/howlinks">How To Guide</a>
 			</div>
 
 		</section>
