--- a/fifteen/covers/two.html
+++ b/fifteen/covers/two.html
@@ -9,6 +9,36 @@
 </head>
 <html>
 	<body class="two">
+	<nav>
+		<div class="nav-container">
+			<div class="next">	
+			<select onChange="window.location.href=this.value">
+					<option value="/interactive-design/fifteen/covers/two.html">Creative Applications</option>
+					<option value="/interactive-design/fifteen/covers/eleven.html">Twitter</option>
+					
+				    <option value="/interactive-design/fifteen/covers/one.html">Yale School of Art</option>
+				    <option value="/interactive-design/fifteen/covers/three.html">Moma</option>
+				    <option value="/interactive-design/fifteen/covers/four.html">Wilco</option>
+				    <option value="/interactive-design/fifteen/covers/five.html">Processing</option>
+				    <option value="/interactive-design/fifteen/covers/six.html">Arduino</option>
+				    <option value="/interactive-design/fifteen/covers/seven.html">Tiny Giant</option>
+				    <option value="/interactive-design/fifteen/covers/eight.html">The Strokes</option>
+				    <option value="/interactive-design/fifteen/covers/nine.html">AIGA</option>
+				    <option value="/interactive-design/fifteen/covers/ten.html">Wikipedia</option>
+				    
+				    <option value="/interactive-design/fifteen/covers/twelve.html">Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/covers/thirteen.html">Yale Architecture</option>
+				    <option value="/interactive-design/fifteen/covers/fourteen.html">The Black Keys</option>
+				    <option value="/interactive-design/fifteen/covers/fifteen.html">IMDB</option>
+				    <option value="/interactive-design/fifteen/covers/sixteen.html">Yale vs Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/covers/seventeen.html">AIGA Mashup</option>
+				    <option value="/interactive-design/fifteen/covers/eighteen.html">On Seeing (invention)</option>
+				    <option value="/interactive-design/fifteen/covers/nineteen.html">Running from the Setting Sun</option>
+				    <option value="/interactive-design/fifteen/covers/twenty.html">Gradient</option>
+			</select>
+			</div>
+		</div>
+	</nav>
 		<div id="container">
 			<a href="/interactive-design/fifteen/two.html">
 			<div class="title">
