--- a/fifteen/nineteen.html
+++ b/fifteen/nineteen.html
@@ -17,25 +17,25 @@
 		<div class="nav-container">
 			<div class="next">	
 			<select onChange="window.location.href=this.value">
-					<option value="/yale/fifteen/nineteen.html">Running from the Setting Sun</option>
-					<option value="/yale/fifteen/two.html">Creative Applications</option>
-				    <option value="/yale/fifteen/one.html">Yale School of Art</option>
-				    <option value="/yale/fifteen/three.html">Moma</option>
-				    <option value="/yale/fifteen/four.html">Wilco</option>
-				    <option value="/yale/fifteen/five.html">Processing</option>
-				    <option value="/yale/fifteen/six.html">Arduino</option>
-				    <option value="/yale/fifteen/seven.html">Tiny Giant</option>
-				    <option value="/yale/fifteen/eight.html">The Strokes</option>
-				    <option value="/yale/fifteen/nine.html">AIGA</option>
-				    <option value="/yale/fifteen/ten.html">Wikipedia</option>
-				    <option value="/yale/fifteen/eleven.html">Twitter</option>
-				    <option value="/yale/fifteen/twelve.html">Cooper Hewitt</option>
-				    <option value="/yale/fifteen/thirteen.html">Yale Architecture</option>
-				    <option value="/yale/fifteen/fourteen.html">The Black Keys</option>
-				    <option value="/yale/fifteen/fifteen.html">IMDB</option>
-				    <option value="/yale/fifteen/sixteen.html">Yale vs Cooper Hewitt</option>
-				    <option value="/yale/fifteen/seventeen.html">AIGA Mashup</option>
-				    <option value="/yale/fifteen/eighteen.html">On Seeing (invention)</option>
+					<option value="/interactive-design/fifteen/nineteen.html">Running from the Setting Sun</option>
+					<option value="/interactive-design/fifteen/two.html">Creative Applications</option>
+				    <option value="/interactive-design/fifteen/one.html">Yale School of Art</option>
+				    <option value="/interactive-design/fifteen/three.html">Moma</option>
+				    <option value="/interactive-design/fifteen/four.html">Wilco</option>
+				    <option value="/interactive-design/fifteen/five.html">Processing</option>
+				    <option value="/interactive-design/fifteen/six.html">Arduino</option>
+				    <option value="/interactive-design/fifteen/seven.html">Tiny Giant</option>
+				    <option value="/interactive-design/fifteen/eight.html">The Strokes</option>
+				    <option value="/interactive-design/fifteen/nine.html">AIGA</option>
+				    <option value="/interactive-design/fifteen/ten.html">Wikipedia</option>
+				    <option value="/interactive-design/fifteen/eleven.html">Twitter</option>
+				    <option value="/interactive-design/fifteen/twelve.html">Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/thirteen.html">Yale Architecture</option>
+				    <option value="/interactive-design/fifteen/fourteen.html">The Black Keys</option>
+				    <option value="/interactive-design/fifteen/fifteen.html">IMDB</option>
+				    <option value="/interactive-design/fifteen/sixteen.html">Yale vs Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/seventeen.html">AIGA Mashup</option>
+				    <option value="/interactive-design/fifteen/eighteen.html">On Seeing (invention)</option>
 				  
 				    <option value="yale/fifteen/twenty.html">Gradient</option>
 			</select>
