--- a/fifteen/six.html
+++ b/fifteen/six.html
@@ -17,7 +17,7 @@
 		<div class="nav-container">
 			<div class="next">	
 			<select onChange="window.location.href=this.value">
-		   <option value="yale/fifteen/two.html">Creative Applications</option>
+		   <option value="/interactive-design/fifteen/two.html">Creative Applications</option>
 				    <option value="/interactive-design/fifteen/six.html">Arduino</option>
 				    <option value="/interactive-design/fifteen/one.html">Yale School of Art</option>
 				    <option value="/interactive-design/fifteen/three.html">Moma</option>
