--- a/fifteen/index2.html
+++ b/fifteen/index2.html
@@ -2,46 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>In Defense of the Poor Image</title>
+		<title>Title Page</title>
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 		<script src="//use.typekit.net/hec2tcw.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
-		<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Vollkorn:700italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style/fonts/stylesheet.css" type="text/css" charset="utf-8" />
 	</head>
-<body class="nineteen">
+<body class="fourteen">
 <div id="container">
-<!--nav-->	<nav>
-		<div class="nav-container">
-			<div class="next">	
-			<select onChange="window.location.href=this.value">
-					<option value="/interactive-design/fifteen/nineteen.html">Running from the Setting Sun</option>
-					<option value="/interactive-design/fifteen/two.html">Creative Applications</option>
-				    <option value="/interactive-design/fifteen/one.html">Yale School of Art</option>
-				    <option value="/interactive-design/fifteen/three.html">Moma</option>
-				    <option value="/interactive-design/fifteen/four.html">Wilco</option>
-				    <option value="/interactive-design/fifteen/five.html">Processing</option>
-				    <option value="/interactive-design/fifteen/six.html">Arduino</option>
-				    <option value="/interactive-design/fifteen/seven.html">Tiny Giant</option>
-				    <option value="/interactive-design/fifteen/eight.html">The Strokes</option>
-				    <option value="/interactive-design/fifteen/nine.html">AIGA</option>
-				    <option value="/interactive-design/fifteen/ten.html">Wikipedia</option>
-				    <option value="/interactive-design/fifteen/eleven.html">Twitter</option>
-				    <option value="/interactive-design/fifteen/twelve.html">Cooper Hewitt</option>
-				    <option value="/interactive-design/fifteen/thirteen.html">Yale Architecture</option>
-				    <option value="/interactive-design/fifteen/fourteen.html">The Black Keys</option>
-				    <option value="/interactive-design/fifteen/fifteen.html">IMDB</option>
-				    <option value="/interactive-design/fifteen/sixteen.html">Yale vs Cooper Hewitt</option>
-				    <option value="/interactive-design/fifteen/seventeen.html">AIGA Mashup</option>
-				    <option value="/interactive-design/fifteen/eighteen.html">On Seeing (invention)</option>
-				  
-				    <option value="/interactive-design/fifteen/twenty.html">Gradient</option>
-			</select>
-			</div>
-		</div>
-	</nav>
 	<header>
 			<h1>In Defense of the Poor Image</h1>
 			<h3>Hito Steyerl, 2009</h3>
