--- a/fifteen/index.html
+++ b/fifteen/index.html
@@ -18,26 +18,26 @@
 		<div class="nav-container">
 			<div class="next">	
 			<select onChange="window.location.href=this.value">
-					<option value="/covers/fifteen.html">IMDB</option>
-					<option value="/covers/two.html">Creative Applications</option>
-				    <option value="/covers/one.html">Yale School of Art</option>
-				    <option value="/covers/three.html">Moma</option>
-				    <option value="/covers/four.html">Wilco</option>
-				    <option value="/covers/five.html">Processing</option>
-				    <option value="/covers/six.html">Arduino</option>
-				    <option value="/covers/seven.html">Tiny Giant</option>
-				    <option value="/covers/eight.html">The Strokes</option>
-				    <option value="/covers/nine.html">AIGA</option>
-				    <option value="/covers/ten.html">Wikipedia</option>
-				    <option value="/covers/eleven.html">Twitter</option>
-				    <option value="/covers/twelve.html">Cooper Hewitt</option>
-				    <option value="/covers/thirteen.html">Yale Architecture</option>
-				    <option value="/covers/fourteen.html">The Black Keys</option>	   
-				    <option value="/covers/sixteen.html">Yale vs Cooper Hewitt</option>
-				    <option value="/covers/seventeen.html">AIGA Mashup</option>
-				    <option value="/covers/eighteen.html">On Seeing (invention)</option>
-				    <option value="/covers/nineteen.html">Running from the Setting Sun</option>
-				    <option value="/covers/twenty.html">Gradient</option>
+					<option value="/interactive-design/fifteen/covers/fifteen.html">IMDB</option>
+					<option value="/interactive-design/fifteen/covers/two.html">Creative Applications</option>
+				    <option value="/interactive-design/fifteen/covers/one.html">Yale School of Art</option>
+				    <option value="/interactive-design/fifteen/covers/three.html">Moma</option>
+				    <option value="/interactive-design/fifteen/covers/four.html">Wilco</option>
+				    <option value="/interactive-design/fifteen/covers/five.html">Processing</option>
+				    <option value="/interactive-design/fifteen/covers/six.html">Arduino</option>
+				    <option value="/interactive-design/fifteen/covers/seven.html">Tiny Giant</option>
+				    <option value="/interactive-design/fifteen/covers/eight.html">The Strokes</option>
+				    <option value="/interactive-design/fifteen/covers/nine.html">AIGA</option>
+				    <option value="/interactive-design/fifteen/covers/ten.html">Wikipedia</option>
+				    <option value="/interactive-design/fifteen/covers/eleven.html">Twitter</option>
+				    <option value="/interactive-design/fifteen/covers/twelve.html">Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/covers/thirteen.html">Yale Architecture</option>
+				    <option value="/interactive-design/fifteen/covers/fourteen.html">The Black Keys</option>	   
+				    <option value="/interactive-design/fifteen/covers/sixteen.html">Yale vs Cooper Hewitt</option>
+				    <option value="/interactive-design/fifteen/covers/seventeen.html">AIGA Mashup</option>
+				    <option value="/interactive-design/fifteen/covers/eighteen.html">On Seeing (invention)</option>
+				    <option value="/interactive-design/fifteen/covers/nineteen.html">Running from the Setting Sun</option>
+				    <option value="/interactive-design/fifteen/covers/twenty.html">Gradient</option>
 			</select>
 			</div>
 		</div>
