--- a/responsive/index.html
+++ b/responsive/index.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Responsive World</title>
+  <title>A Fish Tale</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
 
