--- a/fifteen/index.html
+++ b/fifteen/index.html
@@ -5,10 +5,24 @@
 	<title></title>
 
 <style type="text/css">
-	#menu {
-		width:300px;
-		margin: 200px auto;
+	body {
+		background: url('pattern.png') repeat;
 	}
+	#menu {
+		width:600px;
+		height: 300px;
+		margin: 200px auto;
+
+	}
+
+	nav {
+		width:200px;
+		left: 40%;	
+		top:200px;	
+
+			}
+
+
 </style>
 
 </head>
@@ -18,6 +32,7 @@
 		<div class="nav-container">
 			<div class="next">	
 			<select onChange="window.location.href=this.value">
+					<option value="/interactive-design/fifteen/">Exercises in Style</option>
 					<option value="/interactive-design/fifteen/covers/eighteen.html">On Seeing (invention)</option>
 					<option value="/interactive-design/fifteen/covers/four.html">Wilco</option>
 				    <option value="/interactive-design/fifteen/covers/twenty.html">Gradient</option>
