--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		<section>
 	
 			<div class="assignments">
+				<a class="button" href="/interactive-design/nox">nox archive</a>
+				<br>
+				<a class="button" href="/interactive-design/noxchive">nox</a>
+				<br>
 				<a class="button" href="/interactive-design/clock">Clock</a>
 				<br>
 				<a class="button" href="/interactive-design/how">How to Speak Gibberish</a>
