--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 			<div class="assignments">
 				<a class="button" href="/interactive-design/nox">nox archive</a>
 				<br>
-				<a class="button" href="/interactive-design/noxchive">nox</a>
+				<a class="button" href="/interactive-design/noxchive">future event</a>
 				<br>
-				<a class="button" href="/interactive-design/clock">Clock</a>
+				<a class="button" href="/interactive-design/clock">clock</a>
 				<br>
-				<a class="button" href="/interactive-design/how">How to Speak Gibberish</a>
+				<a class="button" href="/interactive-design/how">how to speak gibberish</a>
 				<br>
-				<a class="button" href="/interactive-design/fifteen/main.html">Exercises in Style</a>
+				<a class="button" href="/interactive-design/fifteen/main.html">exercises in style</a>
 				<br>
-				<a class="button" href="/interactive-design/howlinks">How To Guide</a>
+				<a class="button" href="/interactive-design/howlinks">how to guide</a>
 			</div>
 
 		</section>
