--- a/vinylsale/index.html
+++ b/vinylsale/index.html
@@ -5,6 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Frijole|Monoton|Bangers|Press+Start+2P' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
  
  <img id="set" src="covers.svg">
 
-
+<a id="next"><img id="arrow" src="arrow.png"></a>
 
 </body>
 </html>
