--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 	<body>
 	<div id="container">
 		<header>
-			<h2>Teddy Mathias</h2>
-			Yale Interactive Design
-			<hr>
+			<h2>Teddy Mathias \ Yale Interactive Design</h2>
+			
+		
 		</header>
 		<section>
 	
 			<div class="assignments">
-				<a class="button" href="/interactive-design/nox">nox archive</a>
+				<a class="button" href="/interactive-design/vinylsale">vinylsale</a>
+				<br>
+				<a class="button" href="/interactive-design/brock">brock davis</a>
+				<br>
+				<a class="button" href="/interactive-design/nox">future event archive</a>
 				<br>
 				<a class="button" href="/interactive-design/noxchive">future event</a>
 				<br>
@@ -25,8 +29,7 @@
 				<a class="button" href="/interactive-design/how">how to speak gibberish</a>
 				<br>
 				<a class="button" href="/interactive-design/fifteen/main.html">exercises in style</a>
-				<br>
-				<a class="button" href="/interactive-design/howlinks">how to guide</a>
+			
 			</div>
 
 		</section>
