--- a/vinylsale/index.html
+++ b/vinylsale/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href='http://fonts.googleapis.com/css?family=Frijole|Monoton|Bangers|Press+Start+2P' rel='stylesheet' type='text/css'>
-</head>
-
-<body>
-<div id="cover-wrap">
-	<div id="cover">
-		<div class="title">
+	<head>
+		<title>All Sales Vinyl</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href='http://fonts.googleapis.com/css?family=Frijole|Monoton|Bangers|Press+Start+2P' rel='stylesheet' type='text/css'>
+		<meta charset=utf-8>
+		<meta name=description content="">
+		<meta name=viewport content="width=device-width, initial-scale=1">
+	</head>
+	<body>
+		<div id="cover-wrap">
+			<div id="cover">
+				<div class="title">
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
-
-<audio id="player" controls="" loop autoplay name="media"></audio>
+	<audio id="player" controls="" loop autoplay name="media"></audio>
 <audio id="music" controls="" loop autoplay name="media"></audio>
- 
- <img id="set" src="covers.svg">
 
+<img id="set" src="covers.svg">
 <a id="next"><img id="arrow" src="arrow.png"></a>
-
 </body>
 </html>
