--- a/Brock/index.html
+++ b/Brock/index.html
@@ -13,7 +13,7 @@
 			<h1>Brock Davis</h1>
 			<h2>Interviewed by Teddy Mathias</h2>
 			<br><br>
-			<span class="about"></span>
+			<span class="about">Brock Davis is a multidisciplinary artist specializing art direction, creative direction, design, photography and illustration. Brock is based in Minneapolis, MN.</span>
 			<span class="question">What inspired your project <a href="http://www.itistheworldthatmadeyousmall.com/46341/247088/projects/make-something-cool-every-day-2009">Make Something Cool Everyday</a>?  What did you learn from the project and how did it influence you moving forward?</span>
 			The project came along at the perfect time. A friend of mine, Olly Moss, came up with the idea for the project and hosted it through a Flickr group. He invited me and other designers to try and make something every day for a year. Initially I was interested in the endurance of the project, I liked the challenge of trying to create a piece of art every day for 365 days. But I also like the challenge of trying to make every piece be the best it can be. The project helped me revert back to how I used to create art as a kid, spontaneous, curious and without limitation. I learned to be creatively observant and pay attention to the ordinary things we see every day.<br><br>
 			<span class="question">What would you say is the best thing and the worst thing about social media for an artist? Brock's Links: <a href="https://instagram.com/brockdavis/">Instagram</a> <a href="https://vine.co/u/939036784350908416">Vine</a></span>
