--- a/vinylsale/index.html
+++ b/vinylsale/index.html
@@ -18,9 +18,11 @@
 			</div>
 		</div>
 	<audio id="player" controls="" loop autoplay name="media"></audio>
-<audio id="music" controls="" loop autoplay name="media"></audio>
+<audio id="music" controls="on" loop autoplay name="media" ></audio>
 
 <img id="set" src="covers.svg">
 <a id="next"><img id="arrow" src="arrow.png"></a>
 </body>
+
 </html>
+
