--- a/vinylsale/index.html
+++ b/vinylsale/index.html
@@ -5,7 +5,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Frijole|Monoton|Bangers|Press+Start+2P' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Nosifer|Sarina|Exo:400,900|Lemon|Press+Start+2P|Abril+Fatface' rel='stylesheet' type='text/css'>
 		<meta charset=utf-8>
 		<meta name=description content="">
 		<meta name=viewport content="width=device-width, initial-scale=1">
