--- a/noxchive/index.html
+++ b/noxchive/index.html
@@ -82,7 +82,7 @@
 				I love the darkness. It's the best place to imagine things.<br> It gives me peace.<br><br>
 				<a target="blank" href="../nox/dark.html"><div class="site"><img src="dark.jpg"></div></a>
 			</div>
-
+<!--
 			<div class="section">
 				<img class="heading animated infinite pulse"  src="date.svg">
 				Here I am with some of my friends.<br><br>
@@ -148,7 +148,7 @@
 
 
 
-			</div>
+			</div>-->
 		</div>
 
 	</div>
