--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 				<a class="button" href="/interactive-design/how">how to speak gibberish</a>
 				<br>
 				<a class="button" href="/interactive-design/cssexercise">exercises in style</a>
+				<br>
+				<a class="button" href="/interactive-design/responsive/">responsive</a>
+
 			
 			</div>
 
